components/platform/platform-security/observability-cnp/base/cnp-loki.yaml
# Loki gateway CNP
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-loki-gateway-cnp
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opentelemetry-collector
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: single-binary
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
            - port: "9095"
              protocol: TCP
---
# Loki backend CNP
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-loki-backend-cnp
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: single-binary
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: single-binary
      toPorts:
        - ports:
            - port: "7946"
              protocol: TCP
            - port: "7946"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: single-binary
      toPorts:
        - ports:
            - port: "7946"
              protocol: TCP
            - port: "7946"
              protocol: UDP
