components/platform/platform-security/observability-cnp/base/cnp-otel-collector.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-opentelemetry-collector-cnp
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-collector
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "4317" # OTLP gRPC
              protocol: TCP
            - port: "4318" # OTLP HTTP
              protocol: TCP

    # OpenTelemetry Health Check Extension (Kubelet Probes)
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "13133"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
            - port: "4318"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
