components/platform/platform-security/observability-cnp/base/cnp-prometheus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-prometheus-cnp
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
        - matchLabels:
            app.kubernetes.io/name: opentelemetry-collector
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250" # Kubelet
              protocol: TCP
            - port: "9100"  # Node Exporter
              protocol: TCP

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": observability
