components/platform/platform-security/observability-cnp/base/cnp-tempo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-tempo-cnp
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opentelemetry-collector
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
            - port: "4318"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
